Design Login changed & create initial postolog page

--- a/web/login.html
+++ b/web/login.html
@@ -3,16 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio - RJ45</title>
+    <title>Login - RJ45</title>
     <link rel="stylesheet" href="../web/css/login.css">
 </head>
 <body>
     <div class="background-container"></div> <!-- Fondo con imagen y degradado -->
-        <div class="background-image active"></div>
-        <div class="background-image"></div>
+    <div class="info-container">
+        <h2>RJ45 - sobre el proyecto</h2>
+        <p>La tecnología tiene un papel crucial en el campo médico, abarcando desde consultas virtuales hasta monitoreo avanzado. Este proyecto se enfoca en la automatización de la medición de aspectos motores en pacientes con Parkinson, una enfermedad neurológica que afecta a millones de personas en todo el mundo.
+        </p>
+        <p>Aprovechando la escala MDS-UPDRS, ampliamente utilizada para evaluar la gravedad de los síntomas del Parkinson, el proyecto propone la creación de un dispositivo portátil. Este dispositivo puede medir automáticamente la cadencia, velocidad, duración y fuerza en pruebas de golpeteo y pisoteo, mejorando la precisión y eficacia del diagnóstico y tratamiento.</p>
+        <p>
+        La integración de un sistema que automatice la recolección, almacenamiento y visualización de datos es fundamental para la telemedicina, brindando beneficios significativos tanto para los pacientes como para el personal médico, especialmente en áreas rurales donde el acceso a métodos de diagnóstico consistentes es limitado.
+        </p>
+    </div>
     <div class="login-container">
         <h2>Iniciar Sesión</h2>
-        <form action="dashboard.html">
+        <form action="postlog.html">
             <label for="username">Usuario:</label>
             <input type="text" class="inputs" id="username" name="username" required>
             <label for="password">Contraseña:</label>
