Postlog new features

--- a/web/postlog.html
+++ b/web/postlog.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Inicio - RJ45</title>
-        <link rel="stylesheet" href="../web/css/postlog.css">
-    </head>
-    <body>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Inicio - RJ45</title>
+    <link rel="stylesheet" href="../web/css/postlog.css">
+</head>
+<body>
+    <div class="window">
+        <div class="content-container">
+            <img class="image-margin" src="../web/assets/Reddit.png" alt="Imagen de Ejemplo">
+            <p class="description" id="typewriter-text">
+                Hola [Nombre] espero estés muy bien, bienvenido al proyecto de RJ45. 
+                Para iniciar una prueba por favor haz clic en el botón asignado. 
+                Para borrar, editar y visualizar las pruebas, haz clic en gestionar.
+            </p>
+            <div class="buttons">
+                <button>Gestionar pruebas</button>
+                <button>Iniciar pruebas</button>
+            </div>
+        </div>
+    </div>
+    <script src="../web/js/postlog.js"></script>
+</body>
 </html>
