New window per-Event button Postlog

--- a/web/postlog.html
+++ b/web/postlog.html
@@ -22,8 +22,10 @@
                 </div>
             </div>
         </div>
+    </div>
         <div class ="next-window">
-            <div class="content-container">
+            <div class ="next-window visible">
+                <img src="../web/assets/Reddit.png" alt="">
             </div>
         </div>
     </div>
