Inital measurement managment

--- a/web/postlog.html
+++ b/web/postlog.html
@@ -25,7 +25,8 @@
     </div>
         <div class ="next-window">
             <div class ="next-window visible">
-                <img src="../web/assets/Reddit.png" alt="">
+                <div class="tests-containers" id="tests-container">
+                </div>
             </div>
         </div>
     </div>
