Code improve & better organization Css classes

--- a/web/postlog.html
+++ b/web/postlog.html
@@ -10,15 +10,15 @@
     <div class="window">
         <div class="current-window">
             <div class="content-container">
-                <img class="image-margin" src="../web/assets/Reddit.png" alt="Imagen de Ejemplo">
-                <p class="description" id="typewriter-text">
+                <img id="rotating-image" class="image-margin" src="../web/assets/Reddit.png" alt="Imagen de Ejemplo">
+                <p class="description">
                     Hola [Nombre] espero estés muy bien, bienvenido al proyecto de RJ45. 
                     Para iniciar una prueba por favor haz clic en el botón asignado. 
                     Para borrar, editar y visualizar las pruebas, haz clic en gestionar.
                 </p>
                 <div class="buttons">
-                    <button onclick="openNextwindow()">Gestionar pruebas</button>
-                    <button onclick="openNextwindow()">Iniciar pruebas</button>
+                    <button onclick="openNextwindow() ; rotateImage()">Gestionar pruebas</button>
+                    <button onclick=" rotateImage()">Iniciar pruebas</button>
                 </div>
             </div>
         </div>
