--- a/web/postlog.html
+++ b/web/postlog.html
@@ -25,11 +25,14 @@
     </div>
         <div class ="next-window">
             <div class ="next-window visible">
+
                 <div class="tests-containers" id="tests-container">
+                    
                 </div>
             </div>
         </div>
     </div>
     <script src="../web/js/postlog.js"></script>
+    <script src="../web/js/postlogget.js"></script>
 </body>
 </html>
