fix: read env vars

--- a/web/app/index.html
+++ b/web/app/index.html
@@ -7,14 +7,15 @@
   <title>RJ45</title>
   <link rel="stylesheet" href="css/globals.css">
   <link rel="stylesheet" href="css/index.css">
+  <script type="module" src="api/fetchs.js"></script>
 </head>
 
 <body>
   <header>
     <nav>
       <a href="/">RJ45</a>
-      <a href="/tests">Tests</a>
-      <a href="/login">Iniciar sesión</a>
+      <a href="/tests.html">Tests</a>
+      <a href="/login.html">Iniciar sesión</a>
     </nav>
   </header>
   <div class="container">
